Tested Enchants and fixed some